# ridge-control

./: .gitignore  AGENTS.md  CONTRACT.md  Cargo.toml  README.md  RIDGE-CONTROL-MASTER.md  THE-MONITOR.md
docs/: AGENT-HARNESS-UPGRADE.md  AGENT-TOOLS-EDGE-PLAN.md  BUILD-OVERSIGHT-SYSTEM.md  SEARCH-TOOLS-DESIGN.md
src/: action.rs  app.rs  cli.rs  error.rs  event.rs  main.rs  util.rs
src/agent/: context.rs  disk_store.rs  engine.rs  mandrel.rs  mod.rs  models.rs  prompt.rs  subagent.rs  thread.rs  tokens.rs  tools.rs
src/app/: agent_state.rs  event_loop.rs  handlers.rs  mod.rs  pty_state.rs  rendering.rs  ui_state.rs
src/app/handlers/: chat_llm.rs  config_settings.rs  core.rs  input.rs  mod.rs  streams_process.rs  terminal_tabs.rs  ui_chrome.rs
src/components/: activity_stream.rs  ask_user_dialog.rs  chat_input.rs  command_palette.rs  config_panel.rs  confirm_dialog.rs  context_menu.rs  conversation_viewer.rs  diff_view.rs  gpu_monitor.rs  log_viewer.rs  menu.rs  mod.rs  notification.rs  pane_layout.rs  placeholder.rs  process_monitor.rs  search.rs  settings_editor.rs  spinner.rs  spinner_manager.rs  stream_viewer.rs  terminal.rs  thread_picker.rs  tool_call_widget.rs
src/config/: keybindings.rs  keystore.rs  llm.rs  lsp.rs  mandrel.rs  mod.rs  session.rs  subagent.rs  theme.rs  watcher.rs
src/input/: focus.rs  mod.rs  mode.rs
src/llm/: anthropic.rs  gemini.rs  grok.rs  groq.rs  manager.rs  mod.rs  ollama.rs  openai.rs  provider.rs  shell_session.rs  tools.rs  types.rs
src/lsp/: client.rs  document.rs  manager.rs  mod.rs  protocol.rs  types.rs
src/pty/: grid.rs  mod.rs
src/sirk/: controller.rs  mod.rs  panel.rs  types.rs
src/spindles/: activity_store.rs  mod.rs  stream.rs  types.rs
src/streams/: README.md  client.rs  config.rs  mod.rs
src/tabs/: mod.rs  pty_session.rs  tab_bar.rs
