[package]
name = "ridge-control"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["RidgetopAI"]
description = "Terminal-based command center with PTY emulator, LLM integration, and process monitoring"
license = "MIT"
repository = "https://github.com/RidgetopAi/ridge-control"
keywords = ["tui", "terminal", "llm", "ratatui"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
# ─────────────────────────────────────────────────────────────────────────────
# Core TUI Framework
# ─────────────────────────────────────────────────────────────────────────────
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# ─────────────────────────────────────────────────────────────────────────────
# Async Runtime & Channels
# ─────────────────────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "process", "io-util", "signal", "macros"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
crossbeam-channel = "0.5"

# ─────────────────────────────────────────────────────────────────────────────
# PTY Terminal Emulation (i[2] decision: pty-process over portable-pty)
# ─────────────────────────────────────────────────────────────────────────────
pty-process = "0.4"
vte = "0.15"

# ─────────────────────────────────────────────────────────────────────────────
# Network & Streaming
# ─────────────────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "cookies"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
eventsource-stream = "0.2"  # SSE parsing

# ─────────────────────────────────────────────────────────────────────────────
# Web Access (Phase 2: Agent Tools)
# ─────────────────────────────────────────────────────────────────────────────
scraper = "0.22"        # HTML parsing with CSS selectors
html2md = "0.2"         # HTML to Markdown conversion
lru = "0.12"            # Response caching
governor = "0.8"        # Rate limiting
url = "2.5"             # URL parsing and validation
urlencoding = "2.1"     # URL parameter encoding

# ─────────────────────────────────────────────────────────────────────────────
# Serialization & Configuration
# ─────────────────────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"  # For integer enum serialization (LSP SymbolKind, etc.)
toml = "0.8"
directories = "6"

# ─────────────────────────────────────────────────────────────────────────────
# Config Hot-Reload (i[3] decision: dual-mode gitui-style)
# ─────────────────────────────────────────────────────────────────────────────
notify = "8"
notify-debouncer-mini = "0.5"

# ─────────────────────────────────────────────────────────────────────────────
# Process Monitoring (i[3] decision: procfs for lightweight, sysinfo for features)
# Using procfs as primary, with sysinfo as optional feature for completeness
# ─────────────────────────────────────────────────────────────────────────────
procfs = "0.17"
libc = "0.2"  # For kill syscall

# ─────────────────────────────────────────────────────────────────────────────
# Secure Key Storage (i[2] decision: hybrid keyring + encrypted fallback)
# ─────────────────────────────────────────────────────────────────────────────
keyring = { version = "3", features = ["sync-secret-service"] }  # D-Bus Secret Service backend
chacha20poly1305 = "0.10"  # Fallback encryption
argon2 = "0.5"  # Key derivation
zeroize = { version = "1.8", features = ["derive"] }
rpassword = "7"

# ─────────────────────────────────────────────────────────────────────────────
# Error Handling (i[3] decision: thiserror for library, anyhow for app)
# ─────────────────────────────────────────────────────────────────────────────
thiserror = "2"
anyhow = "1"
color-eyre = "0.6"  # Enhanced backtraces and panic handling

# ─────────────────────────────────────────────────────────────────────────────
# Logging & Tracing
# ─────────────────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"  # File logging

# ─────────────────────────────────────────────────────────────────────────────
# Token Counting (Agent SDK)
# ─────────────────────────────────────────────────────────────────────────────
tiktoken-rs = "0.6"  # OpenAI tokenizer (cl100k_base for GPT-4)

# ─────────────────────────────────────────────────────────────────────────────
# Utilities
# ─────────────────────────────────────────────────────────────────────────────
regex = "1"  # Pattern matching for filtering/grep (TRC-022)
similar = "2"  # Diff algorithm for file_write diff view
dirs = "5"  # Home directory lookup for tool execution
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.9"
fastrand = "2"  # Lightweight RNG for jitter
arboard = "3"  # Clipboard support
glob = "0.3"  # Path pattern matching
bytes = "1"  # Efficient byte handling

# ─────────────────────────────────────────────────────────────────────────────
# Command Palette Fuzzy Search (i[4] decision: nucleo over skim-rs)
# ─────────────────────────────────────────────────────────────────────────────
nucleo = "0.5"  # 6-7x faster than skim, used by Helix editor

# ─────────────────────────────────────────────────────────────────────────────
# CLI
# ─────────────────────────────────────────────────────────────────────────────
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
rstest = "0.23"      # Parametrized tests (i[4] decision)
serial_test = "3"    # Serialize async tests (i[4] decision)

[features]
default = []
# Enable sysinfo for richer system metrics (higher overhead)
sysinfo-backend = ["dep:sysinfo"]

[dependencies.sysinfo]
version = "0.33"
optional = true

[profile.release]
lto = true
codegen-units = 1
# Note: panic = "abort" removed for html2md compatibility (uses catch_unwind)
strip = true

[profile.dev]
# Faster dev builds
opt-level = 0

[profile.dev.package."*"]
# Optimize dependencies in dev for reasonable performance
opt-level = 2
